--- a/charts/artifacthub-repo.yml
+++ b/charts/artifacthub-repo.yml
@@ -9,7 +9,7 @@
 # when the hash of the last commit in the branch you set up changes. This does
 # NOT apply to ownership claim operations, which are processed immediately.
 #
-repositoryID: The ID of the Artifact Hub repository where the packages will be published to (optional, but it enables verified publisher)
+repositoryID: 92360d6c-ee38-4a38-b0ca-ffa0953c0415
 owners: # (optional, used to claim repository ownership)
   - name: royalwang
     email: hxroyal@gmail.com
